--- a/collections/posts/public/wikipedia/_posts/2016-11-20-minneapolis.adoc
+++ b/collections/posts/public/wikipedia/_posts/2016-11-20-minneapolis.adoc
@@ -5,6 +5,11 @@ tagline:                                largest city in the state of minnesota
 categories:                             [ Wikipedia ]
 tags:                                   [ USA, Minnesota, City, Minneapolis ]
 
+sitemap:                                false
+robots:
+  index:                                false
+  follow:                               false
+
 regenerate:                             false
 
 resources:                              []
