--- a/collections/posts/public/wikipedia/_posts/2016-11-24-narcisse-snake-dens.adoc
+++ b/collections/posts/public/wikipedia/_posts/2016-11-24-narcisse-snake-dens.adoc
@@ -5,6 +5,11 @@ tagline:                                largest snake population
 categories:                             [ Wikipedia ]
 tags:                                   [ Canada, Cities ]
 
+sitemap:                                false
+robots:
+  index:                                false
+  follow:                               false
+
 regenerate:                             false
 
 resources:                              []
