--- a/pages/public/asciidoc_skeletons/book/200_chapter.adoc
+++ b/pages/public/asciidoc_skeletons/book/200_chapter.adoc
@@ -11,6 +11,11 @@ description: >
 categories:                             [ Asciidoc, Knowledge ]
 tags:                                   [ Skeleton, Book ]
 
+sitemap:                                false
+robots:
+  index:                                false
+  follow:                               false
+
 permalink:                              /pages/public/skeleton/book/chapter_2/
 regenerate:                             false
 
