--- a/collections/posts/public/wikipedia/_posts/2016-11-26-columbia-river.adoc
+++ b/collections/posts/public/wikipedia/_posts/2016-11-26-columbia-river.adoc
@@ -5,6 +5,11 @@ tagline:                                largest river in the pacific northwest r
 categories:                             [ Wikipedia ]
 tags:                                   [ USA, Rivers ]
 
+sitemap:                                false
+robots:
+  index:                                false
+  follow:                               false
+
 regenerate:                             false
 
 resources:                              []
