--- a/pages/public/asciidoc_skeletons/book/000_intro.adoc
+++ b/pages/public/asciidoc_skeletons/book/000_intro.adoc
@@ -14,6 +14,12 @@ description: >
 tags:                                   [ Introduction, Tutorial ]
 categories:                             [ Asciidoc, Knowledge, Skeleton ]
 
+sitemap:                                false
+robots:
+  index:                                false
+  follow:                               false
+
+
 permalink:                              /pages/public/skeleton/book/intro/
 regenerate:                             false
 
