--- a/pages/public/asciidoc_skeletons/book/900_references.adoc
+++ b/pages/public/asciidoc_skeletons/book/900_references.adoc
@@ -11,6 +11,11 @@ tags:                                   [ Skeleton, Book ]
 permalink:                              /pages/public/skeleton/book/references/
 regenerate:                             false
 
+sitemap:                                false
+robots:
+  index:                                false
+  follow:                               false
+
 resources:                              []
 resource_options:
   - toccer:
