--- a/pages/public/asciidoc_skeletons/multi-document/multi.adoc
+++ b/pages/public/asciidoc_skeletons/multi-document/multi.adoc
@@ -12,6 +12,11 @@ description: >
 categories:                             [ Asciidoc, Skeleton ]
 tags:                                   [ Knowledge, Skeleton, Document ]
 
+sitemap:                                false
+robots:
+  index:                                false
+  follow:                               false
+
 permalink:                              /pages/public/skeleton/multi/
 regenerate:                             false
 
