--- a/pages/public/asciidoc_skeletons/simple-document/simple.adoc
+++ b/pages/public/asciidoc_skeletons/simple-document/simple.adoc
@@ -11,6 +11,11 @@ description: >
 categories:                             [ Asciidoc, Skeleton ]
 tags:                                   [ Knowledge, Skeleton, Document ]
 
+sitemap:                                false
+robots:
+  index:                                false
+  follow:                               false
+
 permalink:                              /pages/public/skeleton/simple/
 regenerate:                             false
 
