--- a/collections/posts/public/wikipedia/_posts/2016-11-26-columbia-river.adoc
+++ b/collections/posts/public/wikipedia/_posts/2016-11-26-columbia-river.adoc
@@ -5,6 +5,9 @@ tagline:                                largest river in the pacific northwest r
 categories:                             [ Wikipedia ]
 tags:                                   [ USA, Rivers ]
 
+image:                                  /assets/images/collections/blog/wikipedia/columbia-river.1200x400.jpg
+
+sitemap:                                false
 regenerate:                             false
 
 resources:                              []
